<resources>
    <string name="app_name">My Movie App</string>
    <string name="title">Tittle</string>
    <string name="duration">2h 10m</string>
    <string name="release">Release Date</string>
    <string name="durattion">Duration</string>
    <string name="genre">Genre</string>
    <string name="release_year">2010–03–08</string>
    <string name="movie">Movie</string>
    <string name="duration_text">"%dh %02dm</string>
    <string name="tv_show">Tv Show</string>
    <string name="description">Description</string>
    <string name="dummy_description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo."</string>
    <string name="icon">Icon</string>
    <string name="favorite_button">Favorite</string>
    <string name="new_sort">Newest</string>
    <string name="random">Random</string>
    <string name="oldest_sort">Oldest</string>
    <string name="menu_favorite">Favorite</string>
    <string name="movies_empty">Data Movie Kosong</string>
    <string name="tvshows_empty">Data Tv Show Kosong</string>
</resources>